<resources>
    <string name="app_name">Absolute Stash</string>
    <string name="splash">Starter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Log in</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="allprojects">All Projects</string>
    <string name="mcastring">MCA Projects</string>
    <string name="iclstring">ICL Projects</string>
    <string name="new_tab">Newest Tab</string>
    <string name="pop_tab">Popular Tab</string>
    <string name="up_tab">Upcoming Tab</string>
    <string name="login">Log in with email</string>
    <string name="signup">Sign up with email</string>
    <string name="Logout">Logout</string>

    <string name="hint_email"> Email Address</string>
    <string name="hint_password"> Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="f_pwd">Forgot your password?</string>
    <string name="btn_fpw">Reset my password</string>
    <string name="hint_name">Username</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_add">Add Project</string>
    <string name="exp_tab">Explore Tab</string>
    <string name="hint_ph">Mobile Number</string>
    <string name="hint_usn">USN</string>
    <string name="hint_glink">Github Profile Link</string>
    <string name="hint_username">Username</string>
    <string name="hint_pu_title">Project Title</string>
    <string name="hint_pu_git_proj_link">Project Github Link</string>
    <string name="hint_pu_description">Project Description</string>
    <string name="hint_pu_domain">Project Domain</string>
    <string name="hint_pu_category">Project Category</string>
    <string name="btn_upload">Upload</string>
    <string name="statstring">Analytics</string>
    <string name="btn_save">SAVE</string>
</resources>
