<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/landing_text_color"
        android:elevation="4dp"
        android:backgroundTint="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:layout_gravity="center">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_new_abs"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_ep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="13dp"
                android:hint="@string/hint_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_usn_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usn_ep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usn"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username_ep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobile_ep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ph"
                android:maxLength="12"
                android:inputType="number"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>



        <Button android:id="@+id/btn_editP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btn_save"
            android:textSize="18sp"

            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>




    </LinearLayout>
</RelativeLayout>