<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_signup.SignUp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_signupS"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/landing_text_color"
        android:elevation="4dp"
        android:backgroundTint="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"


           >

            <EditText
                android:id="@+id/input_name_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"

            >

            <EditText
                android:id="@+id/input_email_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="13dp"
                android:hint="@string/hint_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"

            >

            <EditText
                android:id="@+id/input_password_su"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColor="@color/colorAccent"
                android:drawablePadding="10dp"
                android:inputType="textPassword"

                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btn_signup"
            android:textSize="18sp"

            android:background="@color/colorAccent"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</RelativeLayout>