<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.add_project">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_addpS"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/landing_text_color"
        android:elevation="4dp"
        android:backgroundTint="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/le1"
            android:orienon="vertical">


            <Spinner

                android:layout_width="match_parent"
                android:layout_marginTop="56dp"
                android:layout_height="wrap_content"



                android:id="@+id/users"

                />


        </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:layout_gravity="center">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_title_pu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="13dp"
                android:hint="@string/hint_pu_title"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_gpl_pu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pu_git_proj_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pu_git_proj_link"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description_pu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pu_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pu_description"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_domain_pu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pu_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pu_domain"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_category_pu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pu_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pu_category"
                android:linksClickable="true"
                android:autoLink="web|email"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/pu_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            />


        <Button android:id="@+id/btn_upload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btn_upload"
            android:textSize="18sp"

            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>


        <ProgressBar
            android:id="@+id/pu_progB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/pAccent" />

    </LinearLayout>

</RelativeLayout>