<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_signup.LoginScreen">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_loginS"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/landing_text_color"
        android:elevation="4dp"
        android:backgroundTint="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/le1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
          >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableLeft="@drawable/ic_person_outline"
                android:drawableStart="@drawable/ic_person_outline"
                android:hint="@string/hint_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_lock"
                android:drawableStart="@drawable/ic_lock"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColor="@color/colorAccent"
                android:drawablePadding="10dp"
                android:inputType="textPassword"

                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            />

        <Button android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btn_login"
            android:textSize="18sp"

            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>


        <TextView
            android:id="@+id/forgotP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"


            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/f_pwd"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />


        <ProgressBar
            android:id="@+id/progB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/pAccent" />

    </LinearLayout>

</RelativeLayout>